# m6502-emulator-rust

./: Assembler Documantaion.txt  Cargo.toml  README.md  f.txt
programs/: TEST.txt  default.txt  echo.txt  fibonacci.txt  fibonacci_index.txt  multi.txt  power_three.txt
src/: assembler.rs  assembler_temp.rs  lib.rs  m6502.rs  main.rs  memory.rs
src/ui/: mod.rs  tokenizer.rs  ui.rs
src/ui_weird_interface/: frame.rs  main_window.rs  mod.rs  render.rs
